# OmniContext

./: .env.example  .gitattributes  .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
api/: routes.py
capture/: __init__.py  extractors.py  monitor.py  screenshot.py  session.py
graph/: clusterer.py  linker.py
pipeline/: embedder.py  ocr.py  processor.py  summarizer.py
scripts/: lint.bat  run.bat  test.bat
search/: retrieval.py
storage/: database.py  models.py  settings.py  vector_store.py
tests/: test_core.py
ui/: app.py  styles.css
