[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "omnicontext"
version = "0.1.0"
description = "Local-first Windows ambient memory layer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.7.0",
    "nicegui>=1.4.21",
    "httpx>=0.27.0",
    "pywin32>=306",
    "pyperclip>=1.9.0",
    "psutil>=5.9.8",
    "mss>=9.0.1",
    "Pillow>=10.3.0",
    "easyocr>=1.7.1",
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.8.0",
    "keyboard>=0.13.5",
    "pystray>=0.19.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501", # line too long, handled by black
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
